added targets for pet status

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class = "statusArea">
             <p class = "hungerStat">Hunger:</p>
             <p class = "sleepyStat">Sleepiness:</p>
-            <p class = "hungerStat">Boredom:</p>
+            <p class = "boredomStat">Boredom:</p>
         </div>
         <div class = "petImageBox">
             <img src= "https://i.gifer.com/PcHK.gif" alt="little green monster with a big mouth" >
