added timer $ eventListener

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
             <form>
                 <h1 class = "nameDisplay">Name your pet!</h1>
                 <input class = "nameInput" type="text">
-                <button type="submit">Start!</button>
+                <button type="submit">Submit</button>
             </form>
+        <button class = 'startButton'>Start!</button>
         </div>
         <div class = "statusArea">
-            <p class = "hungerStat">Hunger:</p>
-            <p class = "sleepyStat">Sleepiness:</p>
-            <p class = "boredomStat">Boredom:</p>
+            <p>Hunger: <span class = "hungerStat"></span></p>
+            <p>Sleepiness: <span class = "sleepyStat"></span></p>
+            <p>Boredom: <span class = "boredomStat"></span></p>
         </div>
         <div class = "petImageBox">
             <img src= "https://i.gifer.com/PcHK.gif" alt="little green monster with a big mouth" >
