--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class = "petImageBox">
             <img src= "https://i.gifer.com/PcHK.gif" alt="little green monster with a big mouth" >
-            <h2 class= "ageDisplay">Age:</h2>
+            <h2>Age: <span class= "ageStat"></span></h2>
         </div>
         <div class = "userButtons">
             <button class = "feedButton">Feed!</button>
