pet naming feature complete

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class = "playArea">
         <div class = "nameArea">
-            <form>
-                <h1 class = "nameDisplay">Name your pet!</h1>
-                <input class = "nameInput" type="text">
-                <button type="submit">Submit</button>
+            <h1 class = "nameDisplay"></h1>
+            <form id ="form">
+                <input type="text" id = "userInput" placeholder = "Name your pet!">
+                <button type="submit" id ="submitButton">Submit</button>
             </form>
         <button class = 'startButton'>Start!</button>
         </div>
