set up css grid

--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 </head>
 <body>
     <div class = "playArea">
+        <div class = "statusArea">
+            <p>Hunger: <span class = "hungerStat"></span></p>
+            <p>Sleepiness: <span class = "sleepyStat"></span></p>
+            <p>Boredom: <span class = "boredomStat"></span></p>
+        </div>
         <div class = "nameArea">
             <h1 class = "nameDisplay"></h1>
             <form id ="form">
                 <input type="text" id = "userInput" placeholder = "Name your pet!">
                 <button type="submit" id ="submitButton">Submit</button>
             </form>
-        <button class = 'startButton'>Start!</button>
-        </div>
-        <div class = "statusArea">
-            <p>Hunger: <span class = "hungerStat"></span></p>
-            <p>Sleepiness: <span class = "sleepyStat"></span></p>
-            <p>Boredom: <span class = "boredomStat"></span></p>
-        </div>
-        <div class = "petImageBox">
+            <button class = 'startButton'>Start!</button>
+        
+        
+        <!-- <div class = "petImageBox"> -->
             <img src= "https://i.gifer.com/PcHK.gif" alt="little green monster with a big mouth" >
             <h2>Age: <span class= "ageStat"></span></h2>
         </div>
