--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <div class = "nameArea">
             <h1 class = "nameDisplay"></h1>
             <form id ="form">
-                <input type="text" id = "userInput" placeholder = "Name your pet!">
+                <input type="text" id = "userInput" placeholder = "Name your pet!" required>
                 <button type="submit" id ="submitButton">Submit</button>
             </form>
+
             <div class = startButtonBox>
                 <button class = 'startButton' >Start!</button>
             </div>
